k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: college-event
  labels:
    name: college-event
